# thorax-fe

./: .gitignore  README.md  allowlist.py  config.example.toml  db.sqlite3  main.py  manage.py  pyproject.toml
app/: allowlist.py  api.py  models.py  settings.py
mrf_allow/: apps.py  models.py  urls.py  views.py
mrf_deny/: apps.py  models.py  urls.py  views.py
templates/mrf_allow/: index.html
templates/mrf_simple/: allow.html  deny.html
thorax_core/: allowlist.py  api.py  denylist.py  models.py
web_app/: asgi.py  settings.py  urls.py  wsgi.py
