[tool.poetry]
name = "allowlist-editor"
version = "0.1.0"
description = ""
authors = ["Mar <maaaaaaaaaaaaaaaaaaaaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.0"
django = "^4.2.1"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pdbpp = "^0.10.3"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
